Make GPT aware of current date. Consider this when evaluating current time period.
